--- a/Areas/Admin/Views/Game/Manage.cshtml
+++ b/Areas/Admin/Views/Game/Manage.cshtml
@@ -1,45 +1,113 @@
 ﻿@using LCARS.Areas.Admin.Models
+@using LCARS.Data
 @model LCARS.Areas.Admin.Models.GameView
 @section Scripts {
     <script src="/local/mindmup-editabletable.js"></script>
     <script>
         var gameId = @Model.GameId;
         var round = @Model.Round;
-        $('#table-sector').editableTableWidget();
-        $('#table-slipgate').editableTableWidget();
-        @foreach (var location in ViewBag.Locations)
-        {
-            <text>
-                $('#table-location-@location.LocationId').editableTableWidget();
-            </text>
+        var status = '@Model.Status';
+
+
+        if (status === '@GameStatus.Running') {
+            $('#table-sector').editableTableWidget();
+            $('#table-slipgate').editableTableWidget();
+            @foreach (var location in ViewBag.Locations)
+            {
+                <text>$('#table-location-@location.LocationId').editableTableWidget();</text>
+            }
+
+            $('table td').on('change',
+                function(evt, newValue) {
+                    let success = false;
+                    if ($(this).attr('axis') === 'Sector' || $(this).attr('axis') === 'Slipgate') {
+                        const game = {
+                            GameId: gameId,
+                            [$(this).attr('axis')]: newValue
+                        };
+                        $.ajax('@Url.Action("UpdateValue", "Game", new {Area = ""})',
+                            {
+                                type: 'PUT',
+                                data: JSON.stringify(game),
+                                contentType: 'application/json',
+                                async: false,
+                                complete: function (jqXHR, textStatus) {
+                                    if (jqXHR.responseJSON === true) success = true;
+                                    else {
+                                        alert(
+                                            'Error communicating with the server. Error documented in browser console log.');
+                                        console.log(jqXHR.responseText);
+                                    }
+                                }
+                            });
+                    } else {
+                        const status = {
+                            StatusId: $(this).attr('id'),
+                            [$(this).attr('axis')]: newValue
+                        };
+                        $.ajax('@Url.Action("UpdateValue", "Status", new {Area = ""})',
+                            {
+                                type: 'PUT',
+                                data: JSON.stringify(status),
+                                contentType: 'application/json',
+                                async: false,
+                                complete: function (jqXHR, textStatus) {
+                                    if (jqXHR.responseJSON === true) success = true;
+                                    else {
+                                        alert(
+                                            'Error communicating with the server. Error documented in browser console log.');
+                                        console.log(jqXHR.responseText);
+                                    }
+                                }
+                            });
+                    }
+                    return success;
+                });
         }
 
-        $('table td').on('change',
-            function (evt, newValue) {
-                let success = false;
-                const status = {
-                    StatusId: $(this).attr('id'),
-                    [$(this).attr('axis')]: newValue
-                };
-                $.ajax('@Url.Action("UpdateValue", "Status", new {Area = ""})', {
+        function updateStatus(status) {
+            let success = false;
+            const game = {
+                GameId: gameId,
+                Status: status
+            };
+            $.ajax('@Url.Action("UpdateValue", "Game", new {Area = ""})',
+                {
                     type: 'PUT',
-                    data: JSON.stringify(status),
+                    data: JSON.stringify(game),
                     contentType: 'application/json',
                     async: false,
-                    complete: function (jqXHR, textStatus) {
+                    complete: function(jqXHR, textStatus) {
                         if (jqXHR.responseJSON === true) success = true;
-                        if (jsXHR.statusText !== "OK") {
-                            alert('Error communicating with the server. Error documented in browser console log.');
+                        else {
+                            alert(
+                                'Error communicating with the server. Error documented in browser console log.');
                             console.log(jqXHR.responseText);
                         }
                     }
                 });
-                return success;
-            });
+            if (success === true)
+                document.location.reload();
+        }
     </script>
 }
 <div class="container-fluid p-5">
-    <h1 class="float-right text-warning">Round: @Model.Round</h1>
+    @if (Model.Status == GameStatus.Paused)
+    {
+        <div class="alert alert-warning">Game is currently paused.</div>
+    }
+    <div class="float-right text-right">
+        <h1 class="text-warning">Round: @Model.Round</h1>
+        @if (Model.Status == GameStatus.Paused)
+        {
+            <button class="btn btn-success" onclick="updateStatus('@GameStatus.Running')">Resume Game</button>
+            <button class="btn btn-info" onclick="updateStatus('@GameStatus.NextRound')">Next Round</button>
+        }
+        @if (Model.Status == GameStatus.Running)
+        {
+            <button class="btn btn-danger" onclick="updateStatus('@GameStatus.Paused')">Pause Game</button>
+        }
+    </div>
     <h1 class="text-info">@Model.Name</h1>
     <strong>Created:</strong> @Model.Created
     <hr/>
@@ -50,7 +118,7 @@
                     <table class="table table-sm" id="table-sector">
                         <tr>
                             <th>Ship Sector</th>
-                            <td class="grid-value">BETA</td>
+                            <td class="grid-value border-left" axis="Sector">@Model.Sector</td>
                         </tr>
                     </table>
                 </div>
@@ -58,7 +126,7 @@
                     <table class="table table-sm" id="table-slipgate">
                         <tr>
                             <th>Slipgate Systems</th>
-                            <td class="grid-value">OFFLINE</td>
+                            <td class="grid-value border-left" axis="Slipgate">@Model.Slipgate</td>
                         </tr>
                     </table>
                 </div>
@@ -80,7 +148,7 @@
                                         <tr data-toggle="tooltip" data-placement="top" title="@attribute.Status.Time">
                                             <th>@attribute.Name</th>
                                             <td class="grid-value text-right" axis="TextValue1" id="@attribute.Status.StatusId">@attribute.Status.TextValue1</td>
-                                            <td class="grid-value text-right" axis="TextValue2" id="@attribute.Status.StatusId">@attribute.Status.TextValue2</td>
+                                            <td class="grid-value text-right border-left" axis="TextValue2" id="@attribute.Status.StatusId">@attribute.Status.TextValue2</td>
                                         </tr>
                                     }
                                 </table>
