Working on Location.vue.

--- a/Areas/Admin/Views/Locations/Edit.cshtml
+++ b/Areas/Admin/Views/Locations/Edit.cshtml
@@ -16,7 +16,7 @@
             <tr>
                 <td>
                     <div class="form-group">
-                        <input asp-for="Name" class="form-control" />
+                        <input asp-for="Name" class="form-control" readonly />
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                 </td>
