--- a/Areas/Admin/Views/Locations/Index.cshtml
+++ b/Areas/Admin/Views/Locations/Index.cshtml
@@ -14,7 +14,7 @@
         {
             <tr>
                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                <td><a asp-action="Edit" asp-route-id="@item.LocationId">Edit</a> | <a asp-action="Delete" asp-route-id="@item.LocationId">Delete</a></td>
+                <td><!-- <a asp-action="Edit" asp-route-id="@item.LocationId">Edit</a> | <a asp-action="Delete" asp-route-id="@item.LocationId">Delete</a> --></td>
             </tr>
         }
     </table>
