--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
                         <a class="dropdown-item" href="@Url.Action("Index", "Characters")">Characters</a>
                         <a class="dropdown-item" href="@Url.Action("Index", "Locations")">Locations</a>
                         <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="@Url.Action("Index", "Attributes")">Attributes</a>
                         <a class="dropdown-item" href="@Url.Action("Index", "Objectives")">Objectives</a>
                         <a class="dropdown-item" href="@Url.Action("Index", "Skills")">Skills</a>
                     </div>
