--- a/Areas/Admin/Views/Characters/Index.cshtml
+++ b/Areas/Admin/Views/Characters/Index.cshtml
@@ -9,21 +9,38 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td colspan="3" class="border-top-0">
+                <td colspan="5" class="border-top-0">
                     <h3 class="text-primary">@Html.DisplayFor(modelItem => item.Name) <a href="@Url.Action("Edit", new {id = item.CharacterId})"><small><sup><span class="fa fa-edit"></span></sup></small></a> <a href="@Url.Action("Delete", new {id = item.CharacterId})"><small><sup><span class="fa fa-minus"></span></sup></small></a></h3>
                     <span class="text-warning">@Html.DisplayFor(modelItem => item.Tips)</span>
                 </td>
             </tr>
             <tr>
                 <td>@Html.DisplayFor(modelItem => item.Role)</td>
+                <td>
+                    <strong>Skills</strong>
+                    <ul class="list-inline">
+                        @foreach (var skill in item.CharacterSkills)
+                        {
+                            <li class="list-inline-item">@skill.Skill.Name</li>
+                        }
+                        
+                    </ul>
+                </td>
                 <td>@Html.DisplayFor(modelItem => item.Password)</td>
                 <td>
                     <h4 class="text-primary">@Html.DisplayFor(modelItem => item.TraitName)</h4>
                     @Html.DisplayFor(modelItem => item.TraitDescription)
                 </td>
+                <td>
+                    <strong>Objectives</strong><br/>
+                    @foreach (var objective in item.CharacterObjectives)
+                    {
+                        <li class="list-inline-item">@objective.Objective.Title</li>
+                    }
+                </td>
             </tr>
             <tr>
-                <td colspan="3">@Html.DisplayFor(modelItem => item.Story)</td>
+                <td colspan="5">@Html.DisplayFor(modelItem => item.Story)</td>
             </tr>
         }
     </table>
