--- a/Views/Default/Index.cshtml
+++ b/Views/Default/Index.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <title>Library Computer Access/Retrieval System</title>
-<link href="/dist/vendor.css" rel="stylesheet"></head>
+<link href="/dist/vendor.537c5f1bc715e2de83be.css" rel="stylesheet"></head>
 <body>
 <div role="main" id="app">
     @if (ViewBag.IsInternetExplorer)
@@ -16,5 +16,5 @@
         </div>
     }
 </div>
-<script type="text/javascript" src="/dist/js/vendor.js"></script><script type="text/javascript" src="/dist/js/main.js"></script></body>
+<script type="text/javascript" src="/dist/js/vendor.853e1f5390b89d5994e8.js"></script><script type="text/javascript" src="/dist/js/main.537c5f1bc715e2de83be.js"></script></body>
 </html>
